# Progetto_TCF-marchfra

./: CMakeLists.txt  README.md
data/: example.txt  test.csv  test.txt  test2.txt
exe/: include_check  test1  test2  test3  test4  test5  test6  test8
exe/test4.dSYM/Contents/Resources/DWARF/: test4
exe/test6.dSYM/Contents/Resources/DWARF/: test6
include/: csvFile.hpp  data.hpp  dataset.hpp  file.hpp  fileFactory.hpp  partder.hpp  polyfit.hpp  txtFile.hpp  udouble.hpp
include_t/: csvFile_t.hpp  data_t.hpp  dataset_t.hpp  fileFactory_t.hpp  file_t.hpp  partder_t.hpp  polyfit_t.hpp  txtFile_t.hpp  udouble_t.hpp
personal notes/: README.md  personal_notes.txt
src/: csvFile.cpp  data.cpp  dataset.cpp  fileFactory.cpp  partder.cpp  polyfit.cpp  txtFile.cpp  udouble.cpp
src_t/: csvFile_t.cpp  data_t.cpp  dataset_t.cpp  fileFactory_t.cpp  partder_t.cpp  polyfit_t.cpp  txtFile_t.cpp  udouble_t.cpp
test/: include_check.cpp  test1.cpp  test2.cpp  test4.cpp  test6.cpp  test7.cpp  test8.cpp  test_t1.cpp
